--- a/src/app/shared/modules/list/list.component.scss
+++ b/src/app/shared/modules/list/list.component.scss
@@ -6,7 +6,7 @@
   height: $listHeight;
   overflow: auto;
 
-  * {
+  ::ng-deep * {
     &:focus {
       outline: none;
     }
